[gd_scene load_steps=3 format=3 uid="uid://c3u4ov75gx85f"]

[ext_resource type="Script" path="res://GUI/doorbells_GUI.gd" id="1_nu6nh"]
[ext_resource type="Texture2D" uid="uid://b210wc8r8w571" path="res://res/sprites/GUI/buttons/button_back.png" id="2_wgkqs"]

[node name="DoorbellsGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_nu6nh")

[node name="PanelCont" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -302.5
offset_right = 250.0
offset_bottom = 302.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginCont" type="MarginContainer" parent="PanelCont"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBC" type="VBoxContainer" parent="PanelCont/MarginCont"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="RichTextLabel" parent="PanelCont/MarginCont/VBC"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
bbcode_enabled = true
text = "[center]Apartments[/center]"
fit_content = true

[node name="ButtonBox" type="PanelContainer" parent="PanelCont/MarginCont/VBC"]
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelCont/MarginCont/VBC/ButtonBox"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="DoorbellList" type="VBoxContainer" parent="PanelCont/MarginCont/VBC/ButtonBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Doorbell" parent="PanelCont/MarginCont/VBC/ButtonBox/ScrollContainer/DoorbellList" instance_placeholder="res://GUI/doorbell.tscn"]
layout_mode = 2

[node name="Doorbell2" parent="PanelCont/MarginCont/VBC/ButtonBox/ScrollContainer/DoorbellList" instance_placeholder="res://GUI/doorbell.tscn"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelCont/MarginCont/VBC"]
layout_mode = 2
alignment = 1

[node name="BackBtn" type="TextureButton" parent="PanelCont/MarginCont/VBC/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_wgkqs")

[connection signal="pressed" from="PanelCont/MarginCont/VBC/HBoxContainer/BackBtn" to="." method="_on_back_btn_pressed"]
